# Random-Text-Generator

./: .gitignore  CMakeLists.txt  DataBase.txt  DataParse.c  DataParse.h  Pars.c  Pars.h  Parse.c  Parse.h  README.md  RaceInfo.txt  TAGS.txt  UpperLower.txt  beautifier.c  beautifier.h  database.c  database.h  input.txt  main.c  output.txt  protocol.txt  utilities.h
Race_Parse/: DataParse.c  DataParse.h  main.c
alphabetUtils/: alphabet.c  alphabet.h  alphabet.txt
btfUtils/: beautifier.c  beautifier.h  input.txt  synonyms.txt
db_utils/: cvector.c  cvector.h  database.c  database.h  database.txt  parse.c
names/: nameChanger.c  nameChanger.h  names.txt
namesUtils/: nameChanger.c  names.txt
parserUtils/: DataParse.c  DataParse.h
tdUtils/: TemplateDictionary.c  TemplateDictionary.h  templates.txt
